Bug 347207 - Text label clipping on document load
Summary: Text label clipping on document load
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.14.3 (KDE Applications 4.14.3)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-05-05 08:08 UTC by Ralf Habacker
Modified: 2015-05-05 08:38 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.16.1 (KDE Applications 15.04.1)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2015-05-05 08:08:20 UTC
After loading a xmi document with a text label having font size different from application font size results into clipped text labels on the right and left side.


Reproducible: Always

Steps to Reproduce:
1. start umbrello
2. add two classes one, two
3. add an attribute named 'attribute'  to class 'two' with type one*
4. right click on the text 'attribute' and choose "change font"
5. change font size to a different size (eg. from 9 to 12)
6. save file
7. load the same file

Actual Results:  
The text label is clipped on the right and left side.
 

Expected Results:  
The text label should not be clipped
Comment 1 Ralf Habacker 2015-05-05 08:38:21 UTC
Git commit d0269ab2d53d99546ade37f48bbd09b4996245f8 by Ralf Habacker.
Committed on 05/05/2015 at 08:38.
Pushed by habacker into branch 'Applications/15.04'.

Fix of 'Text label clipping on document load'.

Font metrices has been updated too late after loading the floating text font from xmi file.
FIXED-IN:2.16.1 (KDE Applications 15.04.1)

M  +1    -0    umbrello/widgets/associationwidget.cpp

http://commits.kde.org/umbrello/d0269ab2d53d99546ade37f48bbd09b4996245f8