Fix of 'Text label clipping on document load'.

Font metrices has been updated too late after loading the floating text font from xmi file.

BUG:347207
FIXED-IN:2.16.1 (KDE Applications 15.04.1)